--- a/package.json
+++ b/package.json
@@ -1,25 +1,72 @@
 {
-  "name": "zemlyaki-angular",
+  "name": "zemlyaki",
   "version": "1.0.0",
-  "description": "site zemlyaki with angular framework",
+  "description": "zemlyaki-chernobyl.kiev.ua",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Bokhanchenko/zemlyaki-angular.git"
+    "url": ""
   },
-  "author": "Bokhanchenko",
+  "author": "Bokhanchenko.Dm",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Bokhanchenko/zemlyaki-angular/issues"
+    "url": ""
   },
-  "homepage": "https://github.com/Bokhanchenko/zemlyaki-angular#readme",
+  "homepage": "",
   "devDependencies": {
-    "bower": "^1.8.2",
-    "browser-sync": "^2.18.13",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.0",
+    "browser-sync": "^2.17.5",
+    "change-case": "^3.0.1",
+    "chokidar": "^1.6.1",
     "gulp": "^3.9.1",
-    "gulp-rename": "^1.2.2"
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-clean-css": "^2.0.13",
+    "gulp-concat-css": "^2.3.0",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-gm": "0.0.8",
+    "gulp-htmlmin": "^2.0.0",
+    "gulp-image-resize": "^0.12.0",
+    "gulp-imagemin": "^3.4.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-pug": "^3.2.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-rigger": "^0.5.8",
+    "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^1.12.0",
+    "gulp-uglify": "^1.5.4",
+    "gulp-useref": "^3.1.2",
+    "gulp-watch": "^4.3.10",
+    "imagemin-pngquant": "^5.0.1",
+    "jquery": "^3.1.1",
+    "node-normalize-scss": "^1.4.0",
+    "rimraf": "^2.6.2"
+  },
+  "dependencies": {
+    "body-parser": "~1.15.1",
+    "browser-sync": "^2.13.0",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.2.0",
+    "express": "~4.13.4",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-clean-css": "^2.0.11",
+    "gulp-htmlmin": "^2.0.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rigger": "^0.5.8",
+    "gulp-sass": "^2.3.2",
+    "gulp-uglify": "^1.5.4",
+    "gulp-useref": "^3.1.0",
+    "gulp-watch": "^4.3.8",
+    "method-override": "^2.3.6",
+    "morgan": "~1.7.0",
+    "nconf": "^0.8.4",
+    "serve-favicon": "~2.3.0",
+    "socketio": "^1.0.0",
+    "winston": "^2.2.0"
   }
 }
