--- a/package.json
+++ b/package.json
@@ -67,6 +67,13 @@
     "nconf": "^0.8.4",
     "serve-favicon": "~2.3.0",
     "socketio": "^1.0.0",
-    "winston": "^2.2.0"
+    "winston": "^2.2.0",
+    "angular": "1.3.x",
+    "angular-mocks": "1.3.x",
+    "jquery": "~2.1.1",
+    "bootstrap": "~3.1.1",
+    "angular-route": "1.3.x",
+    "angular-resource": "1.3.x",
+    "angular-animate": "1.3.x"
   }
 }
