--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/Bokhanchenko/zemlyaki-angular.git"
   },
   "author": "Bokhanchenko.Dm",
   "license": "ISC",
   "bugs": {
-    "url": ""
+    "url": "https://github.com/Bokhanchenko/zemlyaki-angular.git"
   },
   "homepage": "",
   "devDependencies": {
