--- a/package.json
+++ b/package.json
@@ -47,7 +47,13 @@
     "rimraf": "^2.6.2"
   },
   "dependencies": {
+    "angular": "1.3.x",
+    "angular-animate": "1.3.x",
+    "angular-mocks": "1.3.x",
+    "angular-resource": "1.3.x",
+    "angular-route": "^1.3.20",
     "body-parser": "~1.15.1",
+    "bootstrap": "~3.1.1",
     "browser-sync": "^2.13.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
@@ -62,18 +68,12 @@
     "gulp-uglify": "^1.5.4",
     "gulp-useref": "^3.1.0",
     "gulp-watch": "^4.3.8",
+    "jquery": "~2.1.1",
     "method-override": "^2.3.6",
     "morgan": "~1.7.0",
     "nconf": "^0.8.4",
     "serve-favicon": "~2.3.0",
     "socketio": "^1.0.0",
-    "winston": "^2.2.0",
-    "angular": "1.3.x",
-    "angular-mocks": "1.3.x",
-    "jquery": "~2.1.1",
-    "bootstrap": "~3.1.1",
-    "angular-route": "1.3.x",
-    "angular-resource": "1.3.x",
-    "angular-animate": "1.3.x"
+    "winston": "^2.2.0"
   }
 }
