--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "",
   "devDependencies": {
+    "@uirouter/angularjs": "^1.0.10",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.0",
     "browser-sync": "^2.17.5",
